Adding customer details endpoint
